Wed Jan 14 10:59:10 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* docs/releasenotes:

	  New directory.

	* docs/releasenotes/index.html:

	  The actual document is placed here to be consistent with TAO. 

	* docs/releasenotes.html:

	  Removed the file since it has been moved into a new directory.

Tue Jan 13 20:54:31 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ChangeLog:

	  Lots of entries had gotten removed. Fixed them.

Tue Jan 13 11:24:55 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/Config.rules:

	  Added 'default-if-not-set' value for UTILITY_BUILD_RULES to 
	  look into well-known location where RedHat and Debian packages
	  are installed.

Sat Jan 10 11:58:05 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* CIAO.mwc:

	  Fixed a typo in the previous checkin.

Sat Jan 10 11:08:42 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* CIAO.mwc:

	  We removed all the mpc files for CIDLC. Needed to remove that
	  from the workspace file too.

Fri Jan  9 16:01:55 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/cidlc.cpp:

          Changed the error return value from -1 to 1. For some reason,
          Visual Studio does not detect the -1 return value and thinks
          everything is fine.

Fri Jan  9 15:45:33 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/Documentation/Build.html:

	  Added some clarifications suggested by Tao Lu.

Fri Jan  9 14:46:41 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CCF/CCF/CIDL/CIDL.vcproj:
        * CCF/CCF/CodeGenerationKit/CodeGenerationKit.vcproj:
        * CCF/CCF/IDL2/IDL2.vcproj:

          Added new files for union support and updated other project
          settings.

        * CIDLC/ServantSourceGenerator.cpp:
        * CIDLC/izeTypeCalculator.cpp:
        * CIDLC/TypeNameEmitter.cpp:
        * CIDLC/TypeNameEmitter.hpp:

          Added support for unions to the back end, and fixed a bug in