@@ -22,7 +22,7 @@ resources for using <i>CIAO</i>.
       <a href="http://www.cs.wustl.edu/~nanbor/projects/CIAO/">
       CIAO project page</a>.<p>
 
-  <li>Project <a href="releasenotes.html">Status (aka. Release
+  <li>Project <a href="releasenotes/index.html">Status (aka. Release
       Notes.)</a><p>
 
   <li>This <a href="new_components.html">page on implementing new
