@@ -79,9 +79,9 @@
 
         <li>Sat Apr  5 2003 - Added the support for connection
             establishment and finished the multiple-component
-            <a href="../../examples/handcrafted/Display/"> HUDisplay
+            <a href="../../examples/OEP/Display/"> HUDisplay
             example</a>.  Check out the <a
-            href="../../examples/handcrafted/Display/descriptors/NOTE.txt">
+            href="../../examples/OEP/Display/descriptors/NOTE.txt">
             note </a> to see how to play with it.  You need to
             have <a href="http://www.trolltech.com/">Qt</a> library
             available if you want to play with the GUI based
@@ -105,7 +105,7 @@
             Daemon control options to read in the component softpkg
             descriptor, spawn a ComponentServer, and instantiate the
             component.  See the <code>
-            <a href="../../examples/handcrafted/Hello/run_test.pl">
+            <a href="../../examples/Hello/run_test.pl">
             run_test.pl</a></code> for more details on how this can be
             done. <p>
 
@@ -153,7 +153,7 @@
 
         <li>Tue Dec 24 2002 - Started working a multi-component
             handcrafted example in <a
-            href="../../examples/handcrafted/Display/">examples/handcrafted/Display/</a><p>
+            href="../../examples/OEP/Display/">examples/OEP/Display/</a><p>
 
         <li>Sat Dec 21 2002 - Added *nix Makefiles, MPC specifications
             and created MPC templates for CIAO clients, component
@@ -184,7 +184,7 @@
             will be automated in the future.<p>
 
         <li>Nov 22 2002 - Completed the first handcrafted example
-            <a href="../../examples/handcrafted/Hello/README">HelloWorld</a>
+            <a href="../../examples/Hello/README">HelloWorld</a>
             component implementation.  CIAO now also include a
             minimally functioning session container implementation.<p>
       </ul>
@@ -379,22 +379,13 @@ certain release together.  All interfaces and types are under
 
       <p>
 
-  <li><b>CIAO 1.0</b> - (TAO 1.4, Oct. 2003)
+  <li><b>CIAO 0.4</b> - (TAO 1.4, Jan 2004)
       <ul>
-        <li>Interface <code>SessionSynchronization</code> and other
-            interfaces in <code>Transaction</code> module, assuming
-            time permitting  and
-            <a href="http://xots.sourceforge.net/"> XOTS </a> will be
-            available in April 2003 timeframe
-        <li>PSS functionality?
-        <li><code>CCM2Context, Session2Context, Entity2Context</code>
-            and <code>
-        <li>Support for <code>ExecutorLocator</code> based component
-            implementation
-        <li><code>ProxyHomeRegistration</code> interface
-            <!-- support complete descriptors -->
+        <li>Usable version of CIAO tested on Linux and Win32. 
+        <li>CIDLC supports most of the IDL2 and IDL3 keywords.  
+        <li>Simple examples of usage is available in
+        <code>$CIAO_ROOT/examples</code>
       </ul>
-
       <p>
 
 </ul>
