@@ -1,3 +1,10 @@
+Wed Jan 14 11:30:58 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* docs/releasenotes/index.html:
+	* docs/index.html:
+
+	  Updated releasenotes.
+
 Wed Jan 14 10:59:10 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 	* docs/releasenotes:
